--- a/breakoDemo/googleSearch/index.html
+++ b/breakoDemo/googleSearch/index.html
@@ -9,7 +9,7 @@
             position: absolute;
             max-width: 100%;
             max-height: 100vh;
-            margin: auto;
+            margin: 0;
             z-index:0;
         }
         .squarelayer{
