--- a/breakoDemo/googleSearch/index.html
+++ b/breakoDemo/googleSearch/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <script src="scripts.js"></script>
-    <canvas class = "squarelayer" id = "canvas1" width = window.innerwidth height = window.innerheight></canvas>
+    <canvas class = "squarelayer" id = "canvas1"></canvas>
     <img class = "background" src="resources/trial.png" alt="screenshot">
 </body>
 
