--- a/breakoDemo/googleSearch/index.html
+++ b/breakoDemo/googleSearch/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
     <canvas class = "squarelayer" id = "canvas1"></canvas>
     <img class = "background" src="resources/trial.png" alt="screenshot">
 </body>
