--- a/breakoDemo/googleSearch/index.html
+++ b/breakoDemo/googleSearch/index.html
@@ -27,12 +27,8 @@
         }
 
     </style>
-    <!-- Import @tensorflow/tfjs-core -->
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-core"></script>
+<script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
 
-<!-- Adds the WebGL backend to the global backend registry -->
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-webgl"></script>
-    
 
 </head>
 
@@ -48,9 +44,6 @@
     <button id = "button7" class = "button">Click Me!</button>
     <button id = "button8" class = "button">Click Me!</button>
     <button id = "button9" class = "button">Click Me!</button>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.6/dat.gui.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/stats.js/r16/Stats.min.js"></script>
-<script type="module" src="src/index.js"></script>
 <script src="script.js"></script>
     
 
