--- a/breakoDemo/googleSearch/index.html
+++ b/breakoDemo/googleSearch/index.html
@@ -35,6 +35,7 @@
 <body>
     
     <canvas class = "squarelayer" id = "canvas1"></canvas>
+    <canvas id="canvas" width="640" height="480"></canvas> 
     <button id = "button1" class = "button">Click Me!</button>
     <button id = "button2" class = "button">Click Me!</button>
     <button id = "button3" class = "button">Click Me!</button>
