--- a/breakoDemo/googleSearch/index.html
+++ b/breakoDemo/googleSearch/index.html
@@ -39,7 +39,8 @@
 <body>
     <canvas class = "camera" id="canvas2" width="640" height="480"></canvas> 
     <canvas class = "squarelayer" id = "canvas1"></canvas>
-    
+    <video id="video" width="640" height="480" autoplay style="display: none"></video>
+
     <button id = "button1" class = "button">Click Me!</button>
     <button id = "button2" class = "button">Click Me!</button>
     <button id = "button3" class = "button">Click Me!</button>
@@ -50,9 +51,7 @@
     <button id = "button8" class = "button">Click Me!</button>
     <button id = "button9" class = "button">Click Me!</button>
 <script src="script.js"></script>
-    
-
-    <img class = "background" src="resources/trial.png" alt="screenshot">
+<img class = "background" src="resources/trial.png" alt="screenshot">
 </body>
 
 
